# StencilParareal

./: .gitignore  CMakeLists.txt  HaloExchange3D.h  HaloExchange3Dtest.cpp  Heat.cpp  Heat.cu  Heat.h  KField.h  MatFile.cpp  MatFile.h  PlotQ.m  QField.h  README.md  buildscript.sh  constructField.m  main.cpp  todi.job  todi_strongscaling.job
STELLA/: CMakeLists.txt
STELLA/libs/: CMakeLists.txt
STELLA/libs/gmock-gtest/: CMakeLists.txt
STELLA/src/: CMakeLists.txt
STELLA/src/shared_definitions/: CMakeLists.txt  CUDADefinitions.h  Definitions.h  Enums.h
STELLA/src/shared_infrastructure/: ApplyToAll.h  ApplyToAllDefinition.h  Array.h  ArrayAlgorithms.h  ArrayAlgorithmsDefinition.h  ArrayDefinition.h  BlockSize.h  BlockStorage.h  CMakeLists.txt  CUDAStreams.cpp  CUDAStreams.h  DataField.h  DataFieldAlignment.h  DataFieldCUDA.h  DataFieldCUDAStorage.h  DataFieldCUDAStorageIndex.h  DataFieldCUDAStoragePointer.h  DataFieldCUDAStorageStrides.h  DataFieldIJBoundary.h  DataFieldOpenMP.h  DataFieldOpenMPStorage.h  DataFieldOpenMPStorageIterator.h  DataFieldStorage.h  DataFieldStorageFormat.h  DataFieldStorageOrder.h  DataFieldStorageStrides.h  DummyStorage.h  ExternalStorage.h  IJBoundary.h  IJKBoundary.h  IJKIndex.h  IJKSize.h  JokerDataField.h  KBoundary.h  MathFunctions.h  ParameterTraits.h  ParameterType.h  PositionChecker.cpp  PositionChecker.h  ScalarStorage.h  (+12 more)
STELLA/src/shared_infrastructure_unittest/: ApplyToAllUnittest.cpp  ApplyToAllUnittest.cu  ArrayUnittest.cpp  ArrayUnittest.cu  CMakeLists.txt  DataFieldCUDAStorageUnittest.cu  DataFieldCUDAUnittest.cu  DataFieldOpenMPStorageUnittest.cpp  DataFieldOpenMPUnittest.cpp  DataFieldStorageUnittest.cpp  DataFieldStorageUnittest.cu  DataFieldUnittest.cpp  DataFieldUnittest.cu  JokerDataFieldUnittest.cpp  JokerDataFieldUnittest.cu  SwapDataFieldUnittest.cpp  SwapDataFieldUnittest.cu  TupleUnittest.cpp  TupleUnittest.cu  UsageMeterUnittest.cpp
STELLA/src/stencil_framework/: BlockLoopFunctorCUDA.h  BlockLoopFunctorOpenMP.h  CMakeLists.txt  Cache.h  CacheStorage.h  CacheStorageFunctors.h  Call.h  ColumnBuffer.h  ColumnBufferCUDA.h  ColumnBufferOpenMP.h  ComparisonValue.h  Context.h  ContextCUDA.h  ContextCUDAFunctors.h  ContextCache.h  ContextCacheFunctors.h  ContextOpenMP.h  ContextOpenMPFunctors.h  DataParameter.h  DataParameterDynamic.h  DataParameterEvaluator.h  DefineCaches.h  DefineCase.h  DefineLoops.h  DefineStages.h  DefineSweep.h  DefineSwitch.h  DefineTemporaries.h  Domains.h  Dummy.cpp  DummyContext.h  FunctionParameter.h  FunctionParameterEvaluator.h  HasDo.h  HasParameter.h  IJRange.h  KBoundarySize.h  KLoopAdvance.h  KLoopBody.h  KLoopBodyFunctors.h  (+43 more)
STELLA/src/stencil_framework_unittest/: CMakeLists.txt  IndirectIndexingUnittest.cpp  IndirectIndexingUnittest.cu  KLoopComputationUnittest.cpp  KLoopComputationUnittest.cu  KRangeAndDomainUnittest.cpp  KRangeAndDomainUnittest.cu  LaunchConfigurationUnittest.cpp  StageVariableUnittest.cpp  StageVariableUnittest.cu  StencilApplyUnittest.cpp  StencilApplyUnittest.cu  StencilBufferUnittest.cpp  StencilBufferUnittest.cu  StencilCacheUnittest.cpp  StencilCacheUnittest.cu  StencilComplexLoopUnittest.cpp  StencilComplexLoopUnittest.cu  StencilFunctionUnittest.cpp  StencilFunctionUnittest.cu  StencilParameterUnittest.cpp  StencilParameterUnittest.cu  StencilSimpleLoopUnittest.cpp  StencilSimpleLoopUnittest.cu  StencilStageUnittest.cpp  StencilStageUnittest.cu  StencilSwitchCaseUnittest.cpp  StencilSwitchCaseUnittest.cu
jobs/: daintAsync.sh  daintEnergy.m  daintEnergy.sh  daintSpeedup.job  daintTaskTiming.job  daintThreads.sh  todi.job  todi_scale.job  todi_strongscaling_covection.job
jobs/finalJobs/: FindStable.sbatch  daintMultiplot.py  daintMultiplot.sh
jobs/paperJobs/: 01-Convergence.job  01-Convergence.sh  02-SpeedupThreads.job  02-SpeedupThreads.sh  03-Reference.job  03-Reference.sh  04-Speedup.job  04-Speedup.sh  04-SpeedupGPU.job  04-SpeedupGPU.sh  05-SpeedupCPU.job  05-SpeedupCPU.sh  09-NewEnergy.sh  09-NewEnergyCPU.job  09-NewEnergyGPU.job
jobs/paperJobs/01-Convergence/: 01-Convergence.eps  plot.py
jobs/paperJobs/02-SpeedupThreads/: 02-SpeedupThreads.eps
jobs/paperJobs/02-SpeedupThreads-6/: plot.py
jobs/paperJobs/04-SpeedupGPU/: 04-SpeedupGPU.eps  collect.sh  plot.py
jobs/paperJobs/04-SpeedupGPU-6/: 04-SpeedupGPU-6.eps  plot.py
jobs/paperJobs/05-SpeedupCPU/: 04-SpeedupGPU.eps  plot.py
jobs/paperJobs/05-SpeedupCPU-6/: 05-SpeedupCPU-6.eps
jobs/paperJobs/06-Runtime/: 06-Runtime.eps
jobs/paperJobs/06-Runtime-6/: plot.py
jobs/paperJobs/06-RuntimeCPU/: 06-RuntimeCPU.eps  plot.py
jobs/paperJobs/08-Energy/: 08-EnergyCPU.eps  08-EnergyGPU.eps  plot.py
jobs/paperJobs/08-EnergyCPU/: 08-EnergyCPU.eps  08-EnergyGPU.eps  plot.py
jobs/paperJobs/09-NewEnergy/: plot.py
matlab/: convectionQ.m  heatEquation.m  integrateConvection.m  my3Dnorm.m  plotFile.m  plotJob.m  timingParareal.m
py/: Convection.py
src/: MatFile.h
src/Communication/: Periodicity.cpp  Periodicity.cu  Periodicity.h  PeriodicityCUDA.cu  SendRecv.h  SendRecvtest.cu  testPeriodicity.cu
src/Convection/: Convection.cpp  Convection.cu  Convection.h  ConvectionFunctions.h  ConvectionSolution.h  HaloExchange3D.h  MatFile.cpp  MatFile.h  QField.h  SendRecvtest.cpp  main.cpp
src/Heat/: Heat.cpp  Heat.h  KField.h  MatFile.h
src/HybridParareal/: main.cpp
src/Parareal/: Parareal.h  RuntimeConfiguration.cpp  RuntimeConfiguration.h  main.cpp  newmain.cpp  newmain.cu
tests/: startConvectionGPU.cu
